--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "mind-ar-react",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
+  "overrides": {
+    "canvas": "2.11.2"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
